--- a/template/footer.html
+++ b/template/footer.html
@@ -32,7 +32,7 @@
               </div>
 			  
 			  <div class="col-md-3 col-sm-6 ">
-                <a href="#" rel="external">
+                <a href="http://flytrip.vn/" rel="external">
                     <img src="img/our-clients/lisa.png" alt="">
                 </a>
               </div>
