done update info

--- a/css/small-business.css
+++ b/css/small-business.css
@@ -121,3 +121,19 @@ text-align: left;
 	border-top-right-radius: 0;
 	border-color:#017572;
  }
+ 
+ table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
