--- a/css/small-business.css
+++ b/css/small-business.css
@@ -137,3 +137,21 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+
+.my-modal {
+  width:600px;
+  height:300px;
+
+  .modal-header {
+    background-color:#ccc;
+    button {
+      font-size:30px;
+    }
+  }
+}
+
+.modal-body2 {
+    overflow-y: hidden;
+    height: 100%;
+    max-height:260px;
+  }
